fix horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,8 @@ body {
 #about-description {
   color: var(--secondary-font-color);
   margin-top: -0.5rem;
-  margin-left: 2.3rem;
-  margin-right: 2.3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   margin-bottom: 1.5rem;
 }
 
@@ -146,7 +146,7 @@ body {
   border-radius: 50%;
   color: white;
   font-weight: bold;
-  margin: 0 1.7rem;
+  margin: 0 1.5rem;
 }
 
 .social-media-buttons {
